Updated to elements beta 12

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Vaadin Grid with paged REST datasource</title>
-  <script src="https://cdn.vaadin.com/vaadin-components/0.3.0-beta10/webcomponentsjs/webcomponents-lite.min.js"></script>
-  <link href="https://cdn.vaadin.com/vaadin-components/0.3.0-beta10/vaadin-components/vaadin-components.html" rel="import">
+  <script src="https://cdn.vaadin.com/vaadin-elements/0.3.0-beta12/webcomponentsjs/webcomponents-lite.min.js"></script>
+  <link href="https://cdn.vaadin.com/vaadin-elements/0.3.0-beta12/vaadin-elements/vaadin-elements.html" rel="import">
   <script src="Promise.min.js"></script>
   <script src="main.js"></script>
 
