fixed "Failed to load" on cdn imported resources

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Vaadin Grid with paged REST datasource</title>
-  <script src="https://cdn.vaadin.com/vaadin-elements/0.3.0-beta12/webcomponentsjs/webcomponents-lite.min.js"></script>
-  <link href="https://cdn.vaadin.com/vaadin-elements/0.3.0-beta12/vaadin-elements/vaadin-elements.html" rel="import">
+  <script src="https://cdn.vaadin.com/vaadin-elements/1.5.0/webcomponentsjs/webcomponents-lite.min.js"></script>
+  <link href='https://cdn.vaadin.com/vaadin-elements/1.5.0/vaadin-grid/vaadin-grid.html' rel='import'>
   <script src="Promise.min.js"></script>
   <script src="main.js"></script>
 
